===========

- @version-full@ (@release-date@)
    - Bugs fixed
       - Fixed bug in Template class when the pattern is updated.
       - Fixed bug when a Restlet application is deployed in Weblogic 
         10 listening on port 80. Reported by Sondre Eikanger Kvalø.
       - Fixed bug with the type of the content tag of Atom documents.
    - Misc
       - Upgraded Grizzly to version 1.9.16.

- 1.1.5 (2009-05-26)
    - Bugs fixed
       - Fixed bug in Directory AlphaNumComparator. 
         Reported and fixed by Rob Heittman.
       - Fixed bug in S3 authentication algorithm when bucket name was
         specified in the host name. Reported by Matt J. Watson.
       - Fixed potential NPE with Reference#getMatrix. Reported by Tal 
         Liron.
       - Fixed matching of Firefox2 for Windows agent name. Reported by
         Peter Childs.
       - Fixed jSSLutils Maven group ID. Reported by John Wismar.
       - Fixed innacurate warnings in logs for 304 (Not modified) 
         statuses with empty response entities. 
         Reported by Nicholas Brown.
       - Fixed bug in ReaderRepresentation causing some issues while
         writing itself. Reported by Nicolas Rinaudo.
       - Fixed bug regarding the resolution of relative URI used in 
         IncludeInfo. Reported by Jerome Bernard.
       - Fixed potential NPE in FreeMarker's TemplateRepresentation.
         Reported by Matt J. Watson.
       - Fixed MediaType.APPLICATION_W3C_XSLT value to 
         application/xslt+xml (was application/xsd+xml).
         Reported by Jean-Yves Cronier.
       - ObjectRepresentation was closing the outputstream too early 
         instead of simply flushing.
       - Fixed potential IllegalStateException when updating the allowed 
         methods on Resource subclasses. Reported by Micah Whitacre.
       - Fixed issue between Tomcat and Servlet adapter when the 
         response could be sent too early due to "Content-Length" 