@@ -11,6 +11,8 @@ Changes log
        - Fixed bug with the type of the content tag of Atom documents.
     - Misc
        - Upgraded Grizzly to version 1.9.16.
+       - Removed console traces when Restlet-GWT starts and stops the
+         HTTP client. Reported by Frank Rousseau.
 
 - 1.1.5 (2009-05-26)
     - Bugs fixed
